WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
235019
Interpolation for the "filter" property fails with a single keyframe
https://bugs.webkit.org/show_bug.cgi?id=235019
Summary
Interpolation for the "filter" property fails with a single keyframe
Antoine Quint
Reported
2022-01-09 10:03:57 PST
Interpolation for the "filter" property fails with a single keyframe
Attachments
Patch
(5.97 KB, patch)
2022-01-09 10:06 PST
,
Antoine Quint
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2022-01-09 10:06:21 PST
Created
attachment 448711
[details]
Patch
Dean Jackson
Comment 2
2022-01-09 10:27:58 PST
Comment on
attachment 448711
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=448711&action=review
> Source/WebCore/animation/KeyframeEffect.cpp:1054 > + if (m_blendingKeyframes.size() < 2)
== 1?
EWS
Comment 3
2022-01-09 11:53:06 PST
Committed
r287826
(
245878@main
): <
https://commits.webkit.org/245878@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 448711
[details]
.
Radar WebKit Bug Importer
Comment 4
2022-01-09 11:54:17 PST
<
rdar://problem/87313978
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug